Fix <pre> whitespace

--- a/app/stylesheets/application.scss
+++ b/app/stylesheets/application.scss
@@ -57,8 +57,7 @@ pre {
   padding: 9.5px;
   font-size: 13px;
   line-height: 1.42857;
-  word-break: break-all;
-  word-wrap: break-word;
+  white-space: pre-wrap;
   color: #333;
   border: 1px solid #ccc;
 
